--- a/views/skills/show.ejs
+++ b/views/skills/show.ejs
@@ -1,4 +1,7 @@
 <%- include('../partials/header') %>
     <h3><%= skill.skill %></h3>
-    <h3>Complete: <%= skill.done ? 'Yes' : 'No' %></h3>
+    <h3>Learned: <%= skill.done ? 'Yes' : 'No' %></h3>
+    <form action="/skills/<%= skill.id %>?_method=DELETE" method="POST" autocomplete="off">
+        <button type="submit">Delete</button>
+    </form>
 <%- include('../partials/footer') %>
