adds styling to CSS

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,33 @@ body {
 a {
   color: #00B7FF;
 }
+
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+#header {
+  display: flex;
+  flex-direction: row;
+  gap: 4vmin;
+  justify-content: flex-end;
+  font-size: 3vmin;
+}
+
+h1 {
+  display: flex;
+  justify-content: center;
+  font-size: 7vmin;
+}
+
+li {
+  font-size: 2.5vmin;
+  margin-bottom: 1vmin;
+}
+
+#add-new {
+  margin-top: 3vmin;
+  font-size: 2.5vmin;
+}
