--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,8 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <a href="/">Home</a>
-    |
-    <a href="/skills">All Skills</a>
+    <dev id="header">
+      <a href="/">Home</a>
+      <a href="/skills">All Skills</a>
+    </dev>
     <h1><%= title %></h1>
