--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -8,5 +8,5 @@
         </li>
     <% }); %>
 </ul>
-<a href="/skills/new">Add New Skill</a>
+<a href="/skills/new" id="add-new">Add New Skill</a>
 <%- include('../partials/footer') %>
