--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,2 +1,3 @@
 <%- include('./partials/header') %>
+<h3 id="home-message">Please Navigate to the All Skills Page</h3>
 <%- include('./partials/footer') %>
