--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -5,6 +5,7 @@
             <a href="/skills/<%= s.id %>"><%= s.skill %></a>
             - 
           <%= s.done ? 'Learned' : 'Needs Time' %>
+          <a href="/skills/<%= s.id %>/edit">Edit</a>
         </li>
     <% }); %>
 </ul>
