--- a/views/skills/show.ejs
+++ b/views/skills/show.ejs
@@ -3,5 +3,7 @@
     <h3>Learned: <%= skill.done ? 'Yes' : 'No' %></h3>
     <form action="/skills/<%= skill.id %>?_method=DELETE" method="POST" autocomplete="off">
         <button type="submit">Delete</button>
+        <a href="/skills/<%= skill.id %>/edit" id="edit">Edit</a>
     </form>
+    
 <%- include('../partials/footer') %>
